--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -3,7 +3,7 @@
     var danhSachBinhLuan = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.BinhLuanViewDTO> : new List<DTOLayer.BinhLuanViewDTO>();
 }
 
-<article data-doi-tuong="khung-binh-luan" class="khung-binh-luan">
+<section data-doi-tuong="khung-binh-luan" class="khung-binh-luan">
     <section class="khung-danh-sach">
         <ul data-doi-tuong="danh-sach">
             @foreach (var binhLuan in danhSachBinhLuan)
