--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -61,7 +61,7 @@
                     {
                         <li>
                             <section class="mo-ta">
-                                <img src="/Content/images/LCT/ChuDe/@phamVi.hinh">
+                                <img src="/@phamVi.hinh/ChuDe/MacDinh">
                                 <p>
                                     @phamVi.moTa
                                 </p>
