--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -14,6 +14,7 @@ body, textarea, select, input {
     font: normal 13px 'Segoe ui';
 }
 a {
+    cursor: pointer;
     color: #000;
     text-decoration: none;  
 }
@@ -49,6 +50,106 @@ body:not(.tai) > .bieu-tuong-tai {
     text-align: center;
     margin-top: 10%;
 }
+
+/*#endregion */
+
+/*#region Khung chức năng */
+
+.khung-chuc-nang-lct {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+    .khung-chuc-nang-lct button {
+        background-color: transparent;
+        border: 0;
+        outline: 0;
+        height: 15px;
+        width: 15px;
+        cursor: pointer;
+    }
+
+        .khung-chuc-nang-lct button i {
+            display: block;
+            font-size: 15px;
+            transition: 0.5s;
+            color: transparent;
+        }
+            
+            :hover > .khung-chuc-nang-lct button i,
+            .khung-chuc-nang-lct ul.mo + button i {
+                color: #ddd;
+            }
+                
+            .khung-chuc-nang-lct button:hover i {
+                color: #08c;
+            }
+
+    .khung-chuc-nang-lct ul {
+        position: absolute;
+        top: 21px;
+        right: -3px;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        display: none;
+        z-index: 9;
+    }
+
+        .khung-chuc-nang-lct ul:before,
+        .khung-chuc-nang-lct ul:after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 0;
+            border: 5px solid transparent;
+            position: absolute;
+            right: 5px;
+        }
+
+        .khung-chuc-nang-lct ul:before {
+            border-bottom-color: #ddd;
+            top: -10px;
+        }
+
+        .khung-chuc-nang-lct ul:after {
+            border-bottom-color: #fff;
+            top: -9px;
+        }
+
+    .khung-chuc-nang-lct li a {
+        display: block;
+        padding: 3px 10px;
+        border-bottom: 1px solid #eee;
+        text-decoration: none;
+        position: relative;
+        white-space: nowrap;
+        cursor: pointer;
+    }
+
+        .khung-chuc-nang-lct li:last-child a {
+            border-bottom: 0;
+        }
+
+        .khung-chuc-nang-lct li:nth-child(even) a {
+            background-color: #fcfcfc;
+        }
+
+        .khung-chuc-nang-lct li a:before {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 3px;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-color: #eee;
+            transition: 0.5s;
+        }
+
+            .khung-chuc-nang-lct li a:hover:before {
+                background-color: #08c;
+            }
 
 /*#endregion */
 
@@ -755,6 +856,7 @@ main > .cot-phai {
         text-decoration: none;
         position: relative;
         font-size: 14px;
+        color: #333;
     }
 
         .khung-chuc-nang .chuc-nang .danh-sach li:nth-child(even) a {
