--- a/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
@@ -13,4 +13,14 @@
 
         </section>
     </section>
+    <section class="khung-chuc-nang-lct">
+        <ul data-doi-tuong="cnbg-@Model.ma">
+            <li>
+                <a data-chuc-nang="xoa-bai-viet" data-value="@Model.ma">Xóa bài viết</a>
+            </li>
+        </ul>
+        <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cnbg-@Model.ma">
+            <i class="pe-7f-config"></i>
+        </button>
+    </section>
 </li>
