--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -1423,12 +1423,6 @@
         padding: 10px;
     }
 
-        .lct-cay .con:after {
-            content: '';
-            display: block;
-            clear: both;
-        }
-
         .lct-cay .con > a {
             border: 1px dashed #ddd;
             border-bottom-style: solid;
@@ -1440,7 +1434,7 @@
             position: relative;
         }
 
-        .lct-cay .muc.rong ~ a {
+        .lct-cay .khung-danh-sach.rong ~ a {
             display: block;
         }
 
@@ -1469,11 +1463,15 @@
             font-size: 30px;
         }
 
-    .lct-cay .muc > li {
+    .lct-cay .khung-danh-sach {
+        display: flex;
+        flex-wrap: wrap;
+            justify-content: space-between;
+    }
+
+    .lct-cay .khung-danh-sach > li {
         border: 1px solid #eee;
         background-color: #fff;
-        display: block;
-        float: left;
         margin: 5px;
         padding: 10px;
         width: 200px;
@@ -1481,11 +1479,11 @@
         transition: 0.5s;
     }
 
-        .lct-cay .muc > li:hover {
+        .lct-cay .khung-danh-sach > li:hover {
             border-color: #ddd;
         }
 
-        .lct-cay .muc > li:after {
+        .lct-cay .khung-danh-sach > li:after {
             content: '';
             display: block;
             width: 100%;
@@ -1497,25 +1495,25 @@
             transition: 0.5s;
         }
 
-        .lct-cay .muc > li:hover:after {
+        .lct-cay .khung-danh-sach > li:hover:after {
             background-color: #08c;
         }
 
-    .lct-cay .muc .mo-ta {
+    .lct-cay .khung-danh-sach .mo-ta {
         height: 40px;
         margin-bottom: 5px;
         padding-bottom: 5px;
         border-bottom: 1px dashed #eee;
     }
 
-    .lct-cay .muc img {
+    .lct-cay .khung-danh-sach img {
         width: 40px;
         height: 40px;
         float: left;
         margin-right: 5px;
     }
 
-    .lct-cay .muc p {
+    .lct-cay .khung-danh-sach p {
         font-size: 11px;
         line-height: 1.3em;
         overflow: hidden;
@@ -1524,7 +1522,7 @@
         -webkit-line-clamp: 3;
     }
 
-    .lct-cay .muc .ten {
+    .lct-cay .khung-danh-sach .ten {
         display: block;
         text-align: center;
         font-weight: bold;
@@ -1536,31 +1534,18 @@
         white-space: nowrap;
     }
 
-        .lct-cay .muc .ten:hover {
+        .lct-cay .khung-danh-sach .ten:hover {
             color: #000;
         }
-
-        /*.lct-cay .muc .ten:before {
-            content: attr(data-so-luong);
-            font: normal 15px Berlin;
-            display: inline-block;
-            font: normal 15px Berlin;
-            padding: 3px 5px;
-            line-height: 15px;
-            text-align: center;
-            color: black;
-            background-color: #f5f5f5;
-            border: 1px solid #eee;
-        }*/
         
-    .lct-cay .muc .chuc-nang {
+    .lct-cay .khung-danh-sach .chuc-nang {
         position: absolute;
         top: 0px;
         right: 0px;
         z-index: 1;
     }
 
-        .lct-cay .muc .chuc-nang i {
+        .lct-cay .khung-danh-sach .chuc-nang i {
             display: block;
             line-height: 20px;
             width: 20px;
@@ -1570,42 +1555,42 @@
             font-size: 16px;
         }
 
-    .lct-cay .muc > li:hover .chuc-nang i {
+    .lct-cay .khung-danh-sach > li:hover .chuc-nang i {
         opacity: 0.4;
     }
 
-    .lct-cay .muc .chuc-nang:hover i {
+    .lct-cay .khung-danh-sach .chuc-nang:hover i {
         opacity: 1;
         color: #08c;
     }
 
-    .lct-cay .muc .chuc-nang ul {
+    .lct-cay .khung-danh-sach .chuc-nang ul {
         position: absolute;
         display: none;
         background-color: #fff;
         border: 1px solid #ddd;
     }
 
-    .lct-cay .muc .chuc-nang:hover i ~ ul {
+    .lct-cay .khung-danh-sach .chuc-nang:hover i ~ ul {
         display: flex;
         flex-direction: column;
     }
 
-    .lct-cay .muc .chuc-nang li {
+    .lct-cay .khung-danh-sach .chuc-nang li {
         display: block;
         white-space: nowrap;
         position: relative;
     }
 
-        .lct-cay .muc .chuc-nang li + li {
+        .lct-cay .khung-danh-sach .chuc-nang li + li {
             border-top: 1px solid #eee;
         }
 
-        .lct-cay .muc .chuc-nang li:nth-child(even) {
+        .lct-cay .khung-danh-sach .chuc-nang li:nth-child(even) {
             background-color: #fcfcfc;
         }
 
-        .lct-cay .muc .chuc-nang li:after {
+        .lct-cay .khung-danh-sach .chuc-nang li:after {
             content: '';
             display: block;
             width: 3px;
@@ -1617,11 +1602,11 @@
             transition: 0.5s;
         }
 
-        .lct-cay .muc .chuc-nang li:hover:after {
+        .lct-cay .khung-danh-sach .chuc-nang li:hover:after {
             background-color: #08c;
         }
 
-    .lct-cay .muc .chuc-nang a {
+    .lct-cay .khung-danh-sach .chuc-nang a {
         display: block;
         padding: 5px 10px;
     }
