--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -16,7 +16,7 @@
         <form data-doi-tuong="binh-luan-form" class="lct-form">
             <input name="Loai" value="@ViewData["LoaiDoiTuong"]" type="hidden" />
             <input name="DoiTuong" value="@ViewData["MaDoiTuong"]" type="hidden" />
-            <ul style="flex-wrap: nowrap; padding: 0 10px 10px 10px; margin-top: 10px;">
+            <ul style="flex-wrap: nowrap; padding: 0; margin: 0;">
                 <li style="margin: 0; width: 100%;">
                     <article class="noi-dung">
                         <article class="input" style="border-right: 0;">
@@ -24,14 +24,14 @@
                         </article>
                     </article>
                 </li>
-                <li style="margin: 0; width: 38px;">
+                <li style="margin: 0; min-width: 34px; max-width: 34px;">
                     <article class="noi-dung">
                         <article class="input" style="border-left: 0;">
                             <input type="file" name="name" value="" />
                         </article>
                     </article>
                 </li>
-                <li style="width: 55px; margin: 0; margin-left: 4px;">
+                <li style="min-width: 55px; max-width: 55px; margin: 0; margin-left: 4px;">
                     <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan">Đăng</button>
                 </li>
             </ul>
